--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "gestiondeclientessolution",
   "version": "0.0.1",
+  "engines": {
+    "node": ">18"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
